Fix: Sponsor Community Partners Spacing

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -444,7 +444,7 @@ img.carousel-card-image {
 }
 
 .partner-sponsor-logo {
-  width: 30%;
+  width: 33%;
 }
 
 .sponsor-logo {
